# per_clib

./: .clang-format  CMakeLists.txt
docs/: CMakeLists.txt  mainpage.md
include/: per_config.h  per_list.h  per_std.h  per_util.h
src/: CMakeLists.txt  per_config.c  per_std.c  per_util.c
src/internal_include/: per_version.h.in
tests/: CMakeLists.txt  per_test_common.h
tests/unittests/: test_per_libc_functions.c
